--- a/chat/templates/bot/interface.html
+++ b/chat/templates/bot/interface.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/static/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>Omar</title>
@@ -11,38 +12,16 @@
 <body>
     <div>
         <div id="chatbox">
-          <p class="botText"><span>Hi! I'm Omar.</span></p>
         </div>
         <div id="userInput">
-          <input id="textInput" type="text" name="msg" placeholder="Message">
-          <input id="buttonInput" type="submit" value="Send">
+          <input id="textInput" type="text" class="form-control" name="msg" placeholder="Message">
+          <input id="buttonInput" type="submit" class="btn btn-primary btn-group-justified" value="Send">
         </div>
-        <script>
-          function getBotResponse() {
-            var rawText = $("#textInput").val();
-            var userHtml = '<p class="userText"><span>' + rawText + '</span></p>';
-            $("#textInput").val("");
-            $("#chatbox").append(userHtml);
-            document.getElementById('userInput').scrollIntoView({block: 'start', behavior: 'smooth'});
-            $.post("/get/", { msg: rawText }).done(function(data) {
-            if(data.text)
-            { var botHtml = '<p class="botText"><span>' + data.text + '</span></p>';
-            }
-            else {
-              var botHtml = '<p class="botText"><span>' + 'Looks like something went wrong' + '</span></p>';
-            }              $("#chatbox").append(botHtml);
-              document.getElementById('userInput').scrollIntoView({block: 'start', behavior: 'smooth'});
-            });
-          }
-          $("#textInput").keypress(function(e) {
-              if(e.which == 13) {
-                  getBotResponse();
-              }
-          });
-          $("#buttonInput").click(function() {
-            getBotResponse();
-          })
-        </script>
+
+        
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+        <script src='/static/bot.js'></script>
       </div>
 </body>
 </html>
