--- a/chat/templates/bot/interface_arabic.html
+++ b/chat/templates/bot/interface_arabic.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html dir="rtl" lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/png" href="/static/favicon.ico"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/static/style.css">
+    <link rel="stylesheet" type="text/css" href="/static/style_arabic.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <title>Omar</title>
+    <title>عمر</title>
 </head>
 <body>
     <div>
         <div id="loaderContainer">
             <div id="loader"> </div>
-            <div id="loaderText">Gathering info about your location</div>
+            <div id="loaderText">جمع معلومات حول موقعك</div>
         </div>
         <div id="chat" style="display:none;">
           <div id="chatbox" class="animate-bottom">
           </div>
           <div id="userInput" class="animate-bottom">
-            <input id="textInput" type="text" class="form-control" name="msg" placeholder="Message">
-            <input id="buttonInput" type="submit" class="btn btn-primary btn-group-justified" value="Send">
+            <input id="textInput" type="text" class="form-control" name="msg" placeholder="رسالة">
+            <input id="buttonInput" type="submit" class="btn btn-primary btn-group-justified" value="إرسال">
           </div>
         </div>
 
