Typing sign added for the bot

--- a/chat/templates/bot/interface_english.html
+++ b/chat/templates/bot/interface_english.html
@@ -20,6 +20,22 @@
           <div id="chatbox" class="animate-bottom">
           </div>
           <div id="userInput" class="animate-bottom">
+                <div id="indicator" style="display: none">
+                        <div class="card text-white bg-danger mb-3" style="max-width: 10%; margin-left:0; margin-right:auto;">
+                            <p class="container card-ext">
+                                <span>
+                                    <div class='spinner'>
+                                        <div class='bounce1'>
+                                        </div>
+                                        <div class='bounce2'>
+                                        </div>
+                                        <div class='bounce3'>
+                                        </div>
+                                    </div>
+                                </span>
+                            </p>
+                        </div>
+                  </div>
             <input id="textInput" type="text" class="form-control" name="msg" placeholder="Message">
             <input id="buttonInput" type="submit" class="btn btn-primary btn-group-justified" value="Send">
           </div>
