--- a/chat/templates/bot/interface_english.html
+++ b/chat/templates/bot/interface_english.html
@@ -6,25 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/png" href="/static/favicon_final.png"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/static/style_english.css">
+    <link rel="stylesheet" type="text/css" href="/static/style_bot.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>Omar</title>
 </head>
 <body>
     <div>
-        <div id="loaderContainer">
-            <div id="loader"> </div>
+        <div id="permission" class="mx-auto" style="width: 200px; margin-top: 40px;">
+            <button class="btn btn-primary" onclick="getLocation()">Allow Location access</button>
+        </div>
+        <div id="loaderContainer" class="mx-auto" style="display: none">
+            <div id="loader"></div>
             <div id="loaderText">Gathering info about your location</div>
         </div>
-        <div id="chat" style="display:none;">
+        <div id="chat" class="mx-auto" >
+
           <div id="chatbox" class="animate-bottom">
           </div>
+
           <div id="userInput" class="animate-bottom">
                 <div id="indicator" style="display: none">
-                        <div class="card text-white bg-danger mb-3" style="max-width: 10%; margin-left:0; margin-right:auto;">
-                            <p class="container card-ext">
+                        <div class="card text-white bg-danger mb-3 pull-left" id="botText" style="margin-left: 0;">
                                 <span>
-                                    <div class='spinner'>
+                                    <div class='spinner mx-auto'>
                                         <div class='bounce1'>
                                         </div>
                                         <div class='bounce2'>
@@ -33,11 +37,10 @@
                                         </div>
                                     </div>
                                 </span>
-                            </p>
                         </div>
                   </div>
-            <input id="textInput" type="text" class="form-control" name="msg" placeholder="Message">
-            <input id="buttonInput" type="submit" class="btn btn-primary btn-group-justified" value="Send">
+                <input id="textInput" type="text" class="form-control" name="msg" placeholder="Message">
+                <input id="buttonInput" type="submit" class="btn btn-primary" value="Send">
           </div>
         </div>
 
