Theme changes and other additions

--- a/chat/static/style_bot.css
+++ b/chat/static/style_bot.css
@@ -1,5 +1,12 @@
 
+body {
+  background: #08478c;
+}
 
+#demo {
+  color: #fff;
+  margin-top: 50px;
+}
 h1 {
     color: black;
     margin-bottom: 0;
@@ -58,7 +65,7 @@ a {
 
 #loader {
     position: relative;
-    color: #da3749;
+    color: #ffffff;
     font-size: 90px;
     text-indent: -9999em;
     overflow: hidden;
@@ -197,7 +204,7 @@ img {
   display: inline-block;
   -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
   animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-  background: rgb(255, 255, 255);
+  background: rgb(131, 131, 131);
 }
 
 .spinner .bounce1 {
@@ -300,3 +307,117 @@ img {
   }
 }
 
+/* Navbar */
+
+.panel {
+  border: 1px solid #08478c; 
+  border-radius:0 !important;
+  transition: box-shadow 0.5s;
+}
+.panel:hover {
+  box-shadow: 5px 0px 40px rgba(0,0,0, .2);
+}
+.panel-footer .btn:hover {
+  border: 1px solid #08478c;
+  background-color: #fff !important;
+  color: #08478c;
+}
+.panel-heading {
+  color: #fff !important;
+  background-color: #08478c !important;
+  padding: 25px;
+  border-bottom: 1px solid transparent;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+}
+.panel-footer {
+  background-color: white !important;
+}
+.panel-footer h3 {
+  font-size: 32px;
+}
+.panel-footer h4 {
+  color: #aaa;
+  font-size: 14px;
+}
+
+.panel-footer .btn {
+  margin: 15px 0;
+  background-color: #08478c;
+  color: #fff;
+}
+.navbar {
+  margin-bottom: 0;
+  background-color: #08478c;
+  z-index: 9999;
+  border: 0;
+  font-size: 12px !important;
+  line-height: 1.42857143 !important;
+  letter-spacing: 4px;
+  border-radius: 0;
+  font-family: Montserrat, sans-serif;
+}
+.navbar li a, .navbar .navbar-brand {
+  color: #fff !important;
+  font-size: 14px;
+}
+.navbar-nav li a:hover, .navbar-nav li.active a {
+  color: #08478c !important;
+  background-color: #fff !important;
+}
+.navbar-default .navbar-toggle {
+  border-color: transparent;
+  color: #fff !important;
+}
+.slide {
+  animation-name: slide;
+  -webkit-animation-name: slide;
+  animation-duration: 1s;
+  -webkit-animation-duration: 1s;
+  visibility: visible;
+}
+@keyframes slide {
+0% {
+  opacity: 0;
+  transform: translateY(70%);
+} 
+100% {
+  opacity: 1;
+  transform: translateY(0%);
+}
+}
+@-webkit-keyframes slide {
+0% {
+  opacity: 0;
+  -webkit-transform: translateY(70%);
+} 
+100% {
+  opacity: 1;
+  -webkit-transform: translateY(0%);
+}
+}
+@media screen and (min-width: 768px) {
+  .lang {
+      margin-top: 10px;
+      }
+}
+@media screen and (max-width: 768px) {
+.col-sm-4 {
+  text-align: center;
+  margin: 25px 0;
+}
+.btn-lg {
+    width: 100%;
+    margin-bottom: 35px;
+}
+
+}
+
+@media screen and (max-width: 480px) {
+.logo {
+    font-size: 150px;
+}
+
+}
