--- a/chat/templates/bot/home.html
+++ b/chat/templates/bot/home.html
@@ -14,7 +14,7 @@
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top" dir="ltr">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -22,7 +22,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#myPage">_OMAR</a></div>
+      <a class="navbar-brand" href="{% url 'home' %}">SAPIENT<br>RAZORFISH_</a></div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#about">ABOUT</a></li>
@@ -54,7 +54,7 @@
       	</div>
 		  <div class="col col-md-3">
           <a href="{% url 'interface_arabic' %}">
-            <button class="btn btn-danger btn-lg lang">عربى</button>
+            <button class="btn btn-primary btn-lg lang">عربى</button>
           </a>
 			</div>
       	</div>
