--- a/chat/static/style_home.css
+++ b/chat/static/style_home.css
@@ -18,7 +18,7 @@ h4 {
     margin-bottom: 30px;
 }  
 .jumbotron {
-    background-color: #da3749;
+    background-color: #08478c;
     color: #fff;
     padding: 100px 25px;
     font-family: Montserrat, sans-serif;
@@ -43,7 +43,7 @@ h4 {
     font-style: normal;
 }
 .panel {
-    border: 1px solid #da3749; 
+    border: 1px solid #08478c; 
     border-radius:0 !important;
     transition: box-shadow 0.5s;
 }
@@ -51,13 +51,13 @@ h4 {
     box-shadow: 5px 0px 40px rgba(0,0,0, .2);
 }
 .panel-footer .btn:hover {
-    border: 1px solid #da3749;
+    border: 1px solid #08478c;
     background-color: #fff !important;
-    color: #da3749;
+    color: #08478c;
 }
 .panel-heading {
     color: #fff !important;
-    background-color: #da3749 !important;
+    background-color: #08478c !important;
     padding: 25px;
     border-bottom: 1px solid transparent;
     border-top-left-radius: 0px;
@@ -78,12 +78,12 @@ h4 {
 
 .panel-footer .btn {
     margin: 15px 0;
-    background-color: #da3749;
+    background-color: #08478c;
     color: #fff;
 }
 .navbar {
     margin-bottom: 0;
-    background-color: #da3749;
+    background-color: #08478c;
     z-index: 9999;
     border: 0;
     font-size: 12px !important;
@@ -94,9 +94,10 @@ h4 {
 }
 .navbar li a, .navbar .navbar-brand {
     color: #fff !important;
+    font-size: 14px;
 }
 .navbar-nav li a:hover, .navbar-nav li.active a {
-    color: #da3749 !important;
+    color: #08478c !important;
     background-color: #fff !important;
 }
 .navbar-default .navbar-toggle {
