--- a/chat/templates/bot/interface_arabic.html
+++ b/chat/templates/bot/interface_arabic.html
@@ -6,25 +6,34 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/png" href="/static/favicon_final.png"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="/static/style_bot.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>عمر</title>
 </head>
 <body>
     <div dir="rtl" lang="ar">
+            <nav class="navbar navbar-default navbar-fixed-top" dir="ltr">
+                    <div class="container">
+                      <div class="navbar-header">
+                        <a class="navbar-brand" href="{% url 'home' %}">SAPIENT<br>RAZORFISH_</a></div>
+                    </div>
+                  </nav>
+
             <div id="permission" class="mx-auto" style="width: 200px; margin-top: 40px;">
                 <button class="btn btn-primary" onclick="getLocation()">السماح بالوصول إلى الموقع</button>
             </div>
         <div id="loaderContainer" class="mx-auto" style="display: none">
             <div id="loader"> </div>
-            <div id="loaderText">جمع معلومات حول موقعك</div>
+            <div id="loaderText" class="text-white" >جمع معلومات حول موقعك</div>
         </div>
         <div id="chat" class="mx-auto">
           <div id="chatbox" class="animate-bottom">
           </div>
           <div id="userInput" class="animate-bottom">
                 <div id="indicator" style="display: none">
-                        <div class="card text-white bg-danger mb-3" id="botText" style="margin-left: 0;">
+                        <div class="card bg-light mb-3" id="botText" style="margin-left: 0;">
                                 <span>
                                     <div class='spinner mx-auto'>
                                         <div class='bounce1'>
@@ -38,8 +47,9 @@
                         </div>
                   </div>
             <input id="textInput" type="text" class="form-control" name="msg" placeholder="رسالة">
-            <input id="buttonInput" type="submit" class="btn btn-primary btn-group-justified" value="إرسال">
+            <input id="buttonInput" type="submit" class="btn btn-danger btn-group-justified" value="إرسال">
           </div>
+          <p id="demo" class="text-white text-right"></p>
         </div>
 
 
