--- a/chat/templates/bot/interface_english.html
+++ b/chat/templates/bot/interface_english.html
@@ -6,18 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/png" href="/static/favicon_final.png"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="/static/style_bot.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>Omar</title>
 </head>
-<body>
-    <div>
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
+        <nav class="navbar navbar-default navbar-fixed-top">
+                <div class="container">
+                  <div class="navbar-header">
+                    <a class="navbar-brand" href="{% url 'home' %}">SAPIENT<br>RAZORFISH_</a></div>
+                </div>
+              </nav>
+    
+    <div class="container-fluid">
         <div id="permission" class="mx-auto" style="width: 200px; margin-top: 40px;">
-            <button class="btn btn-primary" onclick="getLocation()">Allow Location access</button>
+            <button class="btn btn-danger" onclick="getLocation()">Allow Location access</button>
         </div>
         <div id="loaderContainer" class="mx-auto" style="display: none">
             <div id="loader"></div>
-            <div id="loaderText">Gathering info about your location</div>
+            <div id="loaderText" class="text-white">Gathering info about your location</div>
         </div>
         <div id="chat" class="mx-auto" >
 
@@ -26,7 +35,7 @@
 
           <div id="userInput" class="animate-bottom">
                 <div id="indicator" style="display: none">
-                        <div class="card text-white bg-danger mb-3 pull-left" id="botText" style="margin-left: 0;">
+                        <div class="card text-white bg-light mb-3 pull-left" id="botText" style="margin-left: 0;">
                                 <span>
                                     <div class='spinner mx-auto'>
                                         <div class='bounce1'>
@@ -40,8 +49,9 @@
                         </div>
                   </div>
                 <input id="textInput" type="text" class="form-control" name="msg" placeholder="Message">
-                <input id="buttonInput" type="submit" class="btn btn-primary" value="Send">
+                <input id="buttonInput" type="submit" class="btn btn-danger" value="Send">
           </div>
+          <p id="demo" class="text-white"></p>
         </div>
 
 
