--- a/chat/templates/bot/home.html
+++ b/chat/templates/bot/home.html
@@ -42,7 +42,7 @@
   <div class="row">
     <div class="col-sm-8">
       <h2>About</h2><br>
-      <h4>Omar is a chatbot built with the intention of providing users with natural language converstaions about restaurant searches.</h4><br>
+      <h4>Omar is a chatbot built with the intention of providing users with natural language conversations about restaurant searches.</h4><br>
       <p>Want to search for your favourite cuisine? Choose your language, allow access to your location and get started.</p>
       <div class="container">
       	<div class="row">
